log
Fri, May  2, 2025 11:34:12 AM: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
5729e4d
Fri, May  2, 2025 11:34:41 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
842b316
Fri, May  2, 2025 11:51:14 AM: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  11|6
total_score: 15/70
73e1012
Sun, May  4, 2025 11:07:52 PM: 
 treemap.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
 tests:  0|0
4355de3
Sun, May  4, 2025 11:20:22 PM: 
 treemap.c | 23 ++++++++++++-----------
 1 file changed, 12 insertions(+), 11 deletions(-)
 tests:  0|0
da3ce74
Sun, May  4, 2025 11:23:03 PM: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
ecb321c
Sun, May  4, 2025 11:23:51 PM: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  13|5
total_score: 25/70
dbed6aa
Sun, May  4, 2025 11:26:48 PM: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
236f24c
Sun, May  4, 2025 11:54:33 PM: 
 treemap.c | 65 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 64 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:118:25: error: statement with no effect [-Werror=unused-value]
             padre->left == NULL;
                         ^
treemap.c:122:26: error: statement with no effect [-Werror=unused-value]
             padre->right == NULL;
                          ^
cc1.exe: all warnings being treated as errors
c397637
Sun, May  4, 2025 11:55:03 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
d8ea107
